<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mi carrito</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Mi carrito de la\nCompra</string>
    <string name="escanear">Escanear</string>
    <string name="compra">Comenzar</string>
    <string name="title_activity_lector">Mi carrito</string>
    <string name="title_activity_consulta">Consulta</string>
    <string name="id">Codigo</string>
    <string name="descrip">Descripcion</string>
    <string name="valor">Precio</string>
    <string name="canti">Cantidad</string>
    <string name="total">Total</string>
    <string name="title_activity_carrito">Carrito</string>
    <string name="cabecera">Mi carrito de la compra</string>
    <string name="title_activity_mostrar_producto">Mostrar producto</string>
    <string name="vaciar">Vaciar lista</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="precio">Precio:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="descripcion">Descripción:</string>
    <string name="salir">Salir</string>
    <string name="ayuda">Ayuda</string>
    <string name="acercade">Acerca de</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="ayudacarrito">Pulsar el botón Escanear para añadir un producto a la lista\n
        						Pulsar el botón Vaciar lista para limpiar todo el contenido de la lista\n
        						Pulsar sobre un elemento de la lista para editarlo\n
        						Pulsar el botón Eliminar para eliminar el producto de la lista\n
        						Modificar la cantidad de producto que se desee y pulsar el bóton Guardar para volver a la lista </string>
    <string name="title_activity_acercade">Acercade</string>
    <string name="acercadecarrito">Desarrollada por: Ignacio Vives\nVersión Android: 4.3\nAPI Level 18</string>
    <string name="volver">Volver</string>

</resources>
