<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Carrito"
    android:background="#CACFE0" >

    <Button
        android:id="@+id/escanear"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:text="@string/escanear"
        android:textSize="18dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/redondeo"
        android:textColor="@android:color/white"
         />
    
     <Button
        android:id="@+id/vaciar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:text="@string/vaciar"
        android:textSize="18dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/redondeo"
        android:textColor="@android:color/white"
         />
    
    
    <ListView 
        android:id="@+id/LstOpciones" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_below="@+id/titulo"
		android:scrollbars="vertical"
		android:layout_marginBottom="80dp"
		 />
    
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cabecera"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textSize="20dp"
        android:typeface="serif"
        android:textColor="#003366"
         />
    
    
    
    <TextView 
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:textSize="15dp"
        android:textColor="#003366" />
   
</RelativeLayout>
